Fix invalid icon overlapping dropdown elements

--- a/client/src/scss/_multidropdown.scss
+++ b/client/src/scss/_multidropdown.scss
@@ -89,3 +89,8 @@
     border: unset;
   }
 }
+
+.form-control.multi-select.is-invalid,
+.form-control.form-input.dropdown.is-invalid {
+  background-position: right 22px center;
+}
